# xor_toolkit

./: Makefile.in  README.md  aclocal.m4  bootstrap  config.h.in  config.h.in~  configure  configure.ac
ciphertext/: 1984.xor  spell.xor
input/: 1984.in
kappa/: binary.kappa
src/: Makefile.am  Makefile.in  xor_toolkit.c
